# appconfiguration-rust-sdk

./: Cargo.toml  README.md  README.tpl
.github/workflows/: ci.yaml  main.yml
examples/: demo.rs
src/: entity.rs  errors.rs  feature.rs  lib.rs  models.rs  property.rs  value.rs
src/client/: app_configuration_client.rs  app_configuration_ibm_cloud.rs  feature_proxy.rs  feature_snapshot.rs  mod.rs  property_proxy.rs  property_snapshot.rs
src/segment_evaluation/: errors.rs  mod.rs
src/tests/: mod.rs  test_get_feature.rs  test_get_feature_ids.rs  test_get_property.rs  test_get_property_ids.rs  test_using_example_data.rs
tests/: test_app_config.rs
